@@ -1,6 +1,8 @@
 python-apt (0.7.93.1) UNRELEASED; urgency=low
 
   * Fix reference counting for old progress classes (Closes: #566370).
+  * apt/cache.py:
+    - Fix Cache.update() to not raise errors on successful updates.
 
  -- Julian Andres Klode <jak@debian.org>  Sat, 23 Jan 2010 15:35:55 +0100
 
